Remove thirdparty packages

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 [Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
+Assets/Thirdparty/Ciathyza
+"Assets/Glass 4 Pack FREE"
 
 # Visual Studio cache directory
 .vs/
